# MyMinecraftClone

./: .gitignore  CMakeLists.txt  README.md  临时  说明.txt
assets/shaders/: fragShader.glsl  skyboxvert.glsl  vertShader.glsl
assets/textures/: cankao  texture.json
lib/include/glad/: gl.h
src/: chushi.h  main.cpp
src/core/: Chunk.cpp  Chunk.h  PerlinNoise3D.cpp  PerlinNoise3D.h
src/render/: Camera.cpp  Camera.h  Utils.cpp  Utils.h
src/world/: Block.cpp  Block.h
